*SVN*

* Added event-based observations when frequency is not set on observe_field/form #1474 [flash@vanklinkenbergsoftware.nl]

* Added script.aculo.us Javascripts (controls.js, dragdrop.js, effects.js) (NEEDS MORE DESCRIPTION) #1509 [Thomas Fuchs]

* Fixed prototype to consider all fields it doesn't know as text (such as Safari's search) just like the browser in its serialization #1497 [Sean Treadway]

* Improved performance of Routes generation by a factor of 5 #1434 [Nicholas Seckar] 

* Added named routes (NEEDS BETTER DESCRIPTION) #1434 [Nicholas Seckar]

* Improved AbstractRequest documentation #1483 [court3nay@gmail.com]

* Added ActionController::Base.allow_concurrency to control whether the application is thread-safe, so multi-threaded servers like WEBrick knows whether to apply a mutex around the performance of each action. Turned off by default. EXPERIMENTAL FEATURE.

* Added TextHelper#word_wrap(text, line_length = 80) #1449 [tuxie@dekadance.se]

* Added a fall-through action for form_remote_tag that'll be used in case Javascript is unavailable #1459 [Scott Barron]. Example:

    form_remote_tag :html => { :action => url_for(:controller => "some", :action => "place") }

* Added :xhr => true/false option to verify so you can ensure that a request is coming from an Ajax call or not #1464 [Thomas Fuchs]

* Added tag_options as a third parameter to AssetHelper#auto_discovery_link_tag to control options like the title of the link #1430 [kevin.clark@gmail.com]

* Added option to pass in parameters to CaptureHelper#capture, so you can create more advanced view helper methods #1466 [duane.johnson@gmail.com]. Example:

    <% show_calendar(:year => 2005, :month => 6) do |day, options| %>
      <% options[:bgcolor] = '#dfd' if 10..15.include? day %>
      [<%= day %>]
    <% end %>

* Changed the default name of the input tag generated by FormTagHelper#submit_tag from "submit" to "commit" so it doesn't clash with form.submit() calls in Javascript #1271
